force-app/main/default/objects/SalesPlanningLog__c/SalesPlanningLog__c.object-meta.xml
<CustomObject>
    <label>Sales Planning Log</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Planning Log</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>