force-app/main/default/objects/SalesPlanningLog__c/fields/EditedBy__c.field-meta.xml
<CustomField>
    <fullName>EditedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Planning_Log</relationshipName>
    <type>Lookup</type>
</CustomField>