force-app/main/default/objects/SalesPlanningLog__c/fields/EditingUser__c.field-meta.xml
<CustomField>
    <fullName>EditingUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Editing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesPlanningLog</relationshipName>
    <type>Lookup</type>
</CustomField>