force-app/main/default/objects/SalesPlanningLog__c/fields/InEditMode__c.field-meta.xml
<CustomField>
    <fullName>InEditMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Edit Mode</label>
    <type>Checkbox</type>
</CustomField>