force-app/main/default/objects/SalesPlanningLog__c/fields/LastRolledUpAnnualPlanning__c.field-meta.xml
<CustomField>
    <fullName>LastRolledUpAnnualPlanning__c</fullName>
    <label>Last Rolled Up Annual Planning</label>
    <type>Date</type>
</CustomField>