force-app/main/default/objects/SalesPlanningLog__c/fields/LastRolledUpOn__c.field-meta.xml
<CustomField>
    <fullName>LastRolledUpOn__c</fullName>
    <label>Last Rolled Up On</label>
    <type>Date</type>
</CustomField>