force-app/main/default/objects/SalesPlanningLog__c/fields/LastSavedOn__c.field-meta.xml
<CustomField>
    <fullName>LastSavedOn__c</fullName>
    <label>Last Saved On</label>
    <type>Date</type>
</CustomField>