force-app/main/default/objects/SalesPlanningLog__c/fields/LastSubmittedOn__c.field-meta.xml
<CustomField>
    <fullName>LastSubmittedOn__c</fullName>
    <label>Last Submitted On</label>
    <type>Date</type>
</CustomField>